<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">网红直播</string>
    <string name="app_download_url"></string>
    <string name="pay_not_support">暂未开通请选择银行卡或人工代充</string>
    <string name="extension_help_tips">1.出于风险控制,用户存在虚假信息,作弊,恶意攻击行为本平台将采取措施包括但不限于取消活动奖励、禁止参加活动,严重将做封禁处理,并不再通知。\n2.不同用户账号下的手机号码、银行卡号、终端设备号、P地址等多项信息相同的或者其他可以合理的显示为一个用户的,均视为同一用户。\n3.平台将根据活动的实际情况,对本活动规则进行变动或调整,相关变动或调整将公布在活动规则中\n4.第三方通过技术手段恶意攻击或改导致的活动奖励发生错误,平台不负任何责任。\n5.活动期间,因用户操作不当或者用户所在地区网络故、电信运营商故障等非平台所能控制的原因导致的用户无法参与活动或者参与失败,平台不负任何责任。</string>
    <string name="relus">一、邀请收益\n
1.分享邀请码或推广链接, 他人通过您的邀请码注册为新用户, 您3小时内收到%s元佣金. 邀请好友数量无上限, 邀请越多,奖励越多\n\n
二、充值投注返点收益\n
1.通过您的邀请码而注册的会员,便成为您的下级,下级值投注,您即刻收到佣金\n
2.点击【我的】【代理赚钱】可查看您发展的下级以及返佣金\n\n
三、平台过滤刷量, 假刷能够识别, 作弊严封追责\n\n
四、佣金100元起提, 提现之前请先绑定您的银行卡信息, 确保信息的真实准确. 申请提款, 10分钟内到账\n\n
五、佣金可以用来游戏,或者进行收费房间观看\n\n
六、本活动最终解释权归妲己直播所有</string>
    <string name="game_rule_cp_ks">
        三军
    \n六种骰子对应牌面点数1~6，每种骰点为一个注单，以开奖点数为依据，当所投骰点与开奖结果三个中任何一个相同则视为中奖。小指4~10点，大指11~17点注：若三粒骰子平面点数相同视为全骰，不为大小即「大」、「小」各注均视为不中。
    \n围骰
    \n对应 开奖三个骰子牌面点数都相同的各种类型（或称豹子）。
    \n点数
    \n三个骰子相加得到的点数总和，总和为3和18时不中奖，其余总和中奖。
    \n长牌
    \n以两个不同骰子的两两组合共有15种组合类型，所投注组合的两个骰子只要有出现（不需区分位置）在当期开奖牌面中即为中奖。
    \n例如：开奖号码为1、2、3、则投注长牌12、长牌23、长牌13皆视为中奖。
    \n短牌
    \n两个相同骰子的组合，所投注组合的两个骰子只要有出现在当期开奖牌面中即为中奖。
    \n例如：开奖号码为1、1、3、则投注短牌1、1，即为中奖。</string>
    <string name="game_rule_cp_115">
两面盘：
       \n总和/龙虎：
       \n总单、总双：所有5个开奖号码数字相加 ，总值为（奇数）单数叫和单，如11、31；总值为（偶数）双数叫和双，如42、30。
       \n总大、总小：所有5个开奖号码数字相加  总和值大于30为和大；总和值小于30为和小； 若总和值等于30为和 (不计算输赢)。
       \n总尾大、总尾小：所有5个开奖号码数字相加总值的尾数：大于或等于5为尾大，小于或等于4为尾小。
       \n龙：第一球开奖号码大于第五球开奖号码，例如第一球开出10，第五球开出7则本期为龙。
       \n虎：第一球开奖号码小于第五球开奖号码，例如第一球开出3，第五球开出7则本期为虎。
       \n第一球：
       \n大小：以开奖号码的第一个球号为依据：大于或等于6为大，小于或等于5为小，开出11为和 (不计算输赢)。
       \n单双：以开奖号码的第一个球号为依据：号码为（偶数）双数叫双，如2、8；号码为（奇数）单数叫单，如5、9；开出11为和(不计算输赢)。
       \n第二球：
       \n大小：以开奖号码的第二个球号为依据：大于或等于6为大，小于或等于5为小，开出11为和 (不计算输赢)。
       \n单双：以开奖号码的第二个球号为依据：号码为（偶数）双数叫双，如2、8；号码为（奇数）单数叫单，如5、9；开出11为和(不计算输赢)。
       \n第三球：
       \n大小：以开奖号码的第三个球号为依据：大于或等于6为大，小于或等于5为小，开出11为和 (不计算输赢)。
       \n单双：以开奖号码的第三个球号为依据：号码为（偶数）双数叫双，如2、8；号码为（奇数）单数叫单，如5、9；开出11为和(不计算输赢)。
       \n第四球：
       \n大小：以开奖号码的第四个球号为依据：大于或等于6为大，小于或等于5为小，开出11为和 (不计算输赢)。
       \n单双：以开奖号码的第四个球号为依据：号码为（偶数）双数叫双，如2、8；号码为（奇数）单数叫单，如5、9；开出11 为和(不计算输赢)。
       \n第五球：
       \n大小：以开奖号码的第五个球号为依据：大于或等于6为大，小于或等于5为小，开出11为和 (不计算输赢)。
       \n单双：以开奖号码的第五个球号为依据：号码为（偶数）双数叫双，如2、8；号码为（奇数）单数叫单，如5、9；开出11为和(不计算输赢)。
\n单号：
       \n一中一：从1-11共11个号码中选择1个号码进行购买，当期的5个开奖号码中包含所选号码，即可中奖。
       \n第一球：以开奖号码的第一个球号为依据，选中的每一个号码生成一个注单，当投注的号码与开奖第一个球号相同时即为中奖。例  如：当第一个开奖号码为10号，投注第一球为10号则视为中奖，其它号码视为不中奖。
       \n第二球：以开奖号码的第二个球号为依据，选中的每一个号码生成一个注单，当投注的号码与开奖第二个球号相同时即为中奖。例    如：当第二个开奖号码为10号，投注第二球为10号则视为中奖，其它号码视为不中奖。
       \n第三球：以开奖号码的第三个球号为依据，选中的每一个号码生成一个注单，当投注的号码与开奖第三个球号相同时即为中奖。例    如：当第三个开奖号码为10号，投注第三球为10号则视为中奖，其它号码视为不中奖。
       \n第四球：以开奖号码的第四个球号为依据，选中的每一个号码生成一个注单，当投注的号码与开奖第四个球号相同时即为中奖。例    如：当第四个开奖号码为10号，投注第四球为10号则视为中奖，其它号码视为不中奖。
       \n第五球：以开奖号码的第五个球号为依据，选中的每一个号码生成一个注单，当投注的号码与开奖第五个球号相同时即为中奖。例  如：当第五个开奖号码为10号，投注第五球为10号则视为中奖，其它号码视为不中奖。
\n连码：
       \n二中二：从1-11共11个号码中选择2个号码进行购买，只要当期的5个开奖号码中包含所选号码，即可中奖。
       \n三中三：从1-11共11个号码中选择3个号码进行购买，只要当期的5个开奖号码中包含所选号码，即为中奖。
       \n四中四：从1-11共11个号码中选择4个号码进行购买，只要当期的5个开奖号码中包含所选号码，即为中奖。
       \n五中五：从1-11共11个号码中选择5个号码进行购买，只要当期的5个开奖号码中包含所选号码，即为中奖。
       \n六中五：从1-11共11个号码中选择6个号码进行购买，只要当期的5个开奖号码中包含所选号码，即为中奖。
       \n七中五：从1-11共11个号码中选择7个号码进行购买，只要当期的5个开奖号码中包含所选号码，即为中奖。
       \n八中五：从1-11共11个号码中选择8个号码进行购买，只要当期的5个开奖号码中包含所选号码，即为中奖。
       \n前二组选：从1-11共11个号码中，选择2个不重复的号码组成一注，所选号码与当期顺序摇出的5个号码中的前2个号码相同，且顺 序不限，即为中奖。
       \n前三组选：从1-11共11个号码中，选择3个不重复的号码组成一注，所选号码与当期顺序摇出的5个号码中的前3个号码相同，且顺 序不限，即为中奖。
\n直选：
       \n前二直选：从1-11共11个号码中，选择2个不重复的号码组成一注，所选号码与当期顺序摇出的5个号码中的前2个号码相同，且顺序一致，即为中奖。
       \n前三直选：从1-11共11个号码中，选择3个不重复的号码组成一注，所选号码与当期顺序摇出的5个号码中的前3个号码相同，且顺序一致，即为中奖。
    </string>
    <string name="game_rule_cp_sc">
        两面盘：
        \n大小单双：车号1～5为小，6～10为大，双数叫双，单数叫单，投注组合符合中奖结果，即为中奖。
           \n冠军龙/虎："冠军"车号大于"第十名"视为「龙」中奖、反之小于视为「虎」中奖。
           \n亚军龙/虎："亚军"车号大于"第九名"视为「龙」中奖、反之小于视为「虎」中奖。
           \n季军龙/虎："季军"车号大于"第八名"视为「龙」中奖、反之小于视为「虎」中奖。
           \n第四名龙/虎："第四名"车号大于"第七名"视为「龙」中奖、反之小于视为「虎」中奖。
           \n第五名龙/虎："第五名"车号大于"第六名"视为「龙」中奖、反之小于视为「虎」中奖。
\n单号1~10：从冠、亚、季、四、五、六、七、八、九、十任意位置上任意选择一个或一个以上号码， 投注号码符合中奖结果  ，即为中奖。
\n冠亚军组合：冠亚和，即第一名和第二名相加之和为参考依据：
          \n和单：两数相加之和为奇数。
          \n和双：两数相加之和为偶数。
          \n和大：两数相加大于11.（即12~19）
          \n和小：两数相加小于等于11（即 3~11）
          \n至少选择一个和值，竞猜开奖号码冠亚军数字之和，所选数字与开奖结果相同，即为中奖。
    </string>
    <string name="game_rule_cp_ssc">
整合（总和/龙虎）：
        \n总大：万位，仟位，佰位，拾位，个位开奖号码的总和，总和在23~45之间为中奖；
        \n总小：万位，仟位，佰位，拾位，个位开奖号码的总和，总和在0~22之间为中奖；
        \n总单：万位，仟位，佰位，拾位，个位开奖号码的总和，总和为奇数，即为中奖；
        \n总双：万位，仟位，佰位，拾位，个位开奖号码的总和，总和为偶数，即为中奖；
        \n龙：万位与个位的号码，如万位大于个位，即为龙，中奖；
        \n虎：万位与个位的号码，如万位小于个位，即为虎，中奖；
        \n和：万位与个位的号码，如万位等于个位为和，中奖；
\n整合（万位，仟位，佰位，拾位，个位）：
         \n0~9：万位，仟位，佰位，拾位，个位开奖号码的总和，总和为偶数，即为中奖；
        \n大：对应位置开出5~9，即为大，中奖；
        \n小：对应位置开出0~4，即为小，中奖；
        \n单：对应位置开出奇数，即为中奖；
         \n双：对应位置开出偶数，即为中奖；
        \n质：对应位置开出质数，即为中奖；
        \n合：对应位置开出合数，即为中奖；
\n和尾数：
        \n大：两位置相加所得数字个位是5~9，即为大，中奖；
        \n小：两位置相加所得数字个位是0~4，即为小，中奖；
        \n单：两位置相加所得数字个位是奇数，即为中奖；
         \n双：两位置相加所得数字个位是偶数，即为中奖；
        \n质：对两位置相加所得数字个位是质数，即为中奖；
        \n合：两位置相加所得数字个位是合数，即为中奖；
\n龙虎斗：
        \n龙：两位置大小比较，前一位大于后一位，即为龙，中奖；
        \n虎：两位置大小比较，前一位小于后一位，即为虎，中奖；
        \n和：两位置大小比较，前一位等于后一位，即为和，中奖；
\n棋牌（百家乐）：
\n庄是指以开奖五个号码为基础，选择前两个数（万千作为庄的前两张牌）。
\n闲是指以开奖五个号码为基础，选择后两个数（十个作为闲的后两张牌）。
\n如第一轮未分出胜负需要再按牌例发第二轮牌，第三张闲先发，最多每方3张牌，谁最接近9点即为胜方，而相同点数即为和局。
\n如若投注庄闲，开奖结果为和局，那么不计输赢，并且退回本金。
\n有一个天生赢家或者庄家闲家都大于等于6（庄闲都不补牌）
        \n个位与百位和数的个位数为第五张牌，万位和百位和数的个位数为第六张牌。
\n如果闲家补牌，那么第5张牌给闲家，如果闲家不补牌，庄家补牌，那么第5张牌给庄家。
\n闲家头两张牌点数和：0.1.2.3.4.5补一张牌；6.7.8.9不需补牌；
\n庄家头两张牌点数和：0.1.2且闲家的第三张牌是0.1.2.3.4.5.6.7.8.9；3且闲家的第三张牌是0.1.2.3.4.5.6.7.9；4且闲家的第三张牌是2.3.4.5.6.7；5且闲家的第三张牌是4.5.6.7；6且闲家的第三张牌是6.7；7.8不捕牌。
        \n庄：以当前庄家与闲家点数来决定，庄家点数大于闲家，即为庄家胜，中奖；
        \n闲：以当前庄家与闲家点数来决定，庄家点数小于闲家，即为闲家胜，中奖；
         \n和局：以当前庄家与闲家点数来决定，庄家点数等于闲家，即为和局，中奖；
        \n庄对：庄家万位，仟位数字相同，即为对子，中奖；
        \n闲对：闲家拾位，个位数字相同，即为对子，中奖；
        \n庄大：以当前庄家点数来决定，庄家点数为5~9，即为庄大，中奖；
        \n庄小：以当前庄家点数来决定，庄家点数为0~4，即为庄小，中奖；
         \n庄单：以当前庄家点数来决定，庄家点数为1.3.5.7.9，即为庄单，中奖；
        \n庄双：以当前庄家点数来决定，庄家点数为0.2.4.6.8，即为庄双，中奖；
        \n庄质：以当前庄家点数来决定，庄家点数为1.2.3.5.7，即为庄质，中奖；
        \n庄合：以当前庄家点数来决定，庄家点数为0.4.6.8.9，即为庄合，中奖；
        \n闲大：以当前闲家点数来决定，闲家点数为5~9，即为闲大，中奖；
        \n闲小：以当前闲家点数来决定，闲家点数为0~4，即为闲小，中奖；
        \n闲单：以当前闲家点数来决定，闲家点数为1.3.5.7.9，即为闲单，中奖；
        \n闲双：以当前闲家点数来决定，闲家点数为0.2.4.6.8，即为闲双，中奖；
        \n闲质：以当前闲家点数来决定，闲家点数为1.2.3.5.7，即为闲质，中奖；
        \n闲合：以当前闲家点数来决定，闲家点数为0.4.6.8.9，即为闲合，中奖；
\n棋牌（牛牛）：
\n牛牛是开奖结果的五个号码为基准，在开奖的五个数字中若有任意三个数字相加之和为0或10的倍数，则其余下另两个数字之和的个位数值作为对奖基准1点即牛1，2点即牛2，0点为牛牛。
\n例如：开奖结果为00017即8点（牛8）,02818即9点（牛9），99219、88400则是10点（即牛牛）；
\n再如：开奖结果的五个号码为01234、12859将视为无点（任三个数组合都无法组成0或10的倍数）；（开奖结果的五个号码相同时如：11111、22222、33333（豹子）皆视为无点，但00000则视为牛牛）
        \n牛大：开奖结果计算后为牛6~牛牛，即中奖；若为无点退回本金；
        \n牛小：开奖结果计算后为牛1~牛5，即中奖；若为无点退回本金；
        \n牛单：开奖结果计算后为1.3.5.7.9点，即中奖；若为无点退回本金；
        \n牛双：开奖结果计算后为0.2.4.6.8点，即中奖；若为无点退回本金；
\n棋牌（德州扑克）：
        \n豹子：当开出的五个号码都相同，如：22222、33333，99999等；
        \n四张：当五个开奖号码中有四个为一样，如：00001、77797等；
        \n葫芦：当五个开奖号码中三个相同（三条）及两个号码相同（一对），如：77997、45544；
        \n顺子：当五个号码是一串顺序的数字。如：09213、65743；
        \n三张：当五个号码中三个相同，且余下的两个号码完全不同，如：87477、65455等；
        \n两对：当五个号码，能组成两个对子，如：97789、01022等；
        \n一对：当五个开奖号码，能够组成一个对子，如：65877、01322等；
        \n杂牌：当五个号码全部都不一样，不能够组成任意对子或顺子，(不包含五离) 如：06587、98763；
        \n五离：当五个号码不能够组成对子，并且没有任何相邻的两个数。如：28064，19573等；
\n棋牌（三公）：
\n左闲：即 开奖五个数字的前三位（万、千、百）之和的个位数。
\n右闲：即 开奖五个数字的后三位（百、十、个）之和的个位数。
\n和局：即当期左闲与右闲数值相同。
\n规则一：当期左闲值大于右闲值，则当期为左闲，当右闲值大于左闲值则为右闲，当左闲
        \n右闲值相同则本局为和。
\n规则二：开奖结果左闲点数与右闲点数相同时，则押左闲或右闲均不计输赢，并且退还本
        \n金，且不计水费。同理当押注和局时开奖结果为左闲或右闲则都不中奖。
\n左闲尾大小，左闲尾单双，左闲尾质合 即是 以左闲数值为依据：
\n大小：0~4为小，5~9为大；
\n单双： 1、3、5、7、9为单，0、2、4、6、8为双；
\n质合： 1、2、3、5、7为质数，0、4、6、8、9为合数。
\n右闲尾大小，右闲尾单双，右闲尾质合 即是 以右闲数值为依据：
\n大小：0~4为小，5~9为大；
\n单双： 1、3、5、7、9为单，0、2、4、6、8为双；
\n质合： 1、2、3、5、7为质数，0、4、6、8、9为合数。
\n一字：
        \n全五：万，仟，佰，拾，个，五个位置中无论哪个位置出现选中的号码，即为中奖；
        \n前三：万，仟，佰，三个位置中无论哪个位置出现选中的号码，即为中奖；
        \n中三：仟，佰，拾，三个位置中无论哪个位置出现选中的号码，即为中奖；
        \n后三：佰，拾，个，三个位置中无论哪个位置出现选中的号码，即为中奖；
\n和数：
        \n前三：万，仟，佰，三个位置开奖号码的和值与所下注号码相同，即为中奖；
        \n中三：仟，佰，拾，三个位置开奖号码的和值与所下注号码相同，即为中奖；
        \n后三：佰，拾，个，三个位置开奖号码的和值与所下注号码相同，即为中奖；
    </string>
    <string name="game_rule_cp_lhc">
特码 ：从1-49中任选1个或多个号码，每个号码为一注，所选号码中包含特码，即为中奖。
\n单双大小：
       \n单：数值为奇数的数值。不计算数49。当中奖号码为49时，不计算赔率，直接返还49的筹码数。
       \n双：数值为偶数的数值。不计算数49。当中奖号码为49时，不计算赔率，直接返还49的筹码数。
       \n大：数值为大于等于25的数值。不计算数49。当中奖号码为49时，不计算赔率，直接返还49的筹码数。
       \n小：数值为小于25的数值。不计算数49。当中奖号码为49时，不计算赔率，直接返还49的筹码数。
       \n和单：以特码个位和十位数字相加，为奇数。不计算数49。当中奖号码为49时，不计算赔率，直接返还49的筹码数。
       \n和双：以特码个位和十位数字相加，为偶数。不计算数49。当中奖号码为49时，不计算赔率，直接返还49的筹码数。
       \n和小：以当前码的个位和十位数字相加，小于或等于6为小，不计算数49。当中奖号码为49时，不计算赔率，直接返还49的筹码             数。
       \n和大：以当前码个位和十位数字相加，大于或等于7为大，不计算数49。当中奖号码为49时，不计算赔率，直接返还49的筹码数。
\n正码 ：从1-49中任选1个或多个号码，每个号码为一注，所选号码在开奖号码前六位中存在，即为中奖。
\n合肖-中：以特码为开奖基础，可选择1~10个生肖为一组合，若当期特码开奖号码的特码亦在此组合内，即为中奖；若当期特码开出4号，则所有组合皆视为和局。
\n合肖-不中：以特码开奖为基础，可选择1~10个生肖为一组合，若当期特码开奖号码未在所选的生肖组合内，即为中奖；若当期特码开  出49号，则所有组合皆视为和局。
\n一肖：指当期开奖号码(6个正码+特码)，包含下注生肖的一个或多个号码则视为中奖，但派彩只派一次，即同生肖号码出现一个或多个号码都只派彩一次。
\n生肖色波头尾：
       \n生肖：选择1~10个生肖，若当期特码开奖号码在此组合内，即为中奖；若当期特码为49，所有组合为和局
       \n色波： 以开出的7个色波，哪种颜色最多为中奖。 开出的6个正码各以1个色波计，特别码以1.5个色波计。而以下3种结果视为和 局：6个正码开出3蓝3绿，特别码是1.5红；6个正码开出3蓝3红，特别码是1.5绿；6个正码开出3绿3红，特别码是1.5蓝。投注红/ 绿/蓝波，如开出和局，则退回本金；会员也可投注和，开出和局，即为中奖。
       \n特码头尾数：选择特码头(十位)尾(个位)的数字进行投注，与特码相同，即为中奖。
\n正肖七色波：
       \n依据开出的所有正码为主。若当期6个正码，只要有1个落在下注生肖范围内，视为中奖。如超过1个正码落在下注生肖范围内 ，派彩将倍增！以开出的7个色波，哪种颜色最多为中奖。 开出的6个正码各以1个色波计，特别码以1.5个色波计。而以下3种结果视为和局：6个正码开出3蓝3绿，特别码是1.5红；6个正码开出3蓝3红，特别码是1.5绿；6个正码开出3绿3红，特别码是1.5蓝。投注红/绿/蓝波，如开出和局，则退回本金；会员也可投注和，开出和局，即为中奖。
\n连码：
        \n四全中：  最少选择4个号码形成一个组合  ，最多只能10个号码，若四个号码都是开奖号码的正码，视为中奖，其余情形视为不中奖。
        \n三全中：至少选择三个号码，最多只能10个号码，每三个号码为一组合，若三个号码都是开奖号码之正码（不含特码），即为中    奖。
        \n三中二：至少选择三个号码，最多只能10个号码，每三个号码为一组合，若其中至少有两个是开奖号码中的正码（不含特码）即为 中奖。
        \n二全中：至少选择两个号码，最多只能10个号码，每二个号码为一组合，二个号码都是开奖号码之正码（不含特码），即为中奖。
        \n二中特：至少选择两个号码，最多只能10个号码，每二个号码为一组合，二个号码都是开奖号码（含特码），即为中奖。
\n特串：
        \n至少选择两个号码，最多只能10个号码，每二个号码为一组合，其中一个是正码，一个是特别码，即为中奖。
\n半波：根据特码对应的特性来区分，分为红蓝绿三个波色，以及号码大于或等于25为大，小于或等于24为小；奇数为单，偶数为双；合单合双为开奖号的十位与个位相加后得数的单双，特码是49时为和，不算任何大小单双。投注内容与号码特性全吻合，即为中奖。
    </string>
    <string name="main_home">首页</string>
    <string name="main_list">排行</string>
    <string name="main_niuren">牛人</string>
    <string name="main_me">我的</string>
    <string name="main_list_day">日榜</string>
    <string name="main_list_week">周榜</string>
    <string name="main_list_month">月榜</string>
</resources>