<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@mipmap/ic_main_rank_list_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:background="@drawable/bg_rank_main"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/view_main_rank_nav_day_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:minEms="4"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:background="@drawable/bg_rank_left_checked"
            android:gravity="center"
            android:text="@string/main_list_day"
            android:textColor="@color/color_rank_list_nav_checked"
            android:textSize="14sp"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white" />
        <TextView
            android:id="@+id/view_main_rank_nav_week_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:minEms="4"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:background="@drawable/bg_list_btn"
            android:gravity="center"
            android:text="@string/main_list_week"
            android:textColor="@color/white"
            android:textSize="14sp"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white" />
        <TextView
            android:id="@+id/view_main_rank_nav_month_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:minEms="4"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:background="@drawable/bg_list_btn"
            android:gravity="center"
            android:text="@string/main_list_month"
            android:textColor="@color/white"
            android:textSize="14sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:gravity="center"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/data_group_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_centerHorizontal="true"
                android:id="@+id/rl_head_bg"
                android:layout_width="100dp"
                android:layout_height="100dp">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/view_main_rank_top_user_iv"
                    android:layout_width="80dp"
                    android:layout_height="80dp"

                    android:layout_marginBottom="5dp"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/shouye"
                    app:riv_oval="true"/>
                <ImageView
                    android:id="@+id/iv_ranking_bg"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:scaleType="fitXY"
                    android:src="@mipmap/icon_ranking_one" />

                <ImageView
                    android:id="@+id/view_main_rank_top_user_level_iv"
                    android:layout_width="30dp"
                    android:layout_height="15dp"
                    android:visibility="invisible"
                    android:layout_marginTop="-10dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/view_main_rank_top_user_iv"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/view_main_rank_top_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_head_bg"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:text="虚位以待"/>

            <TextView
                android:id="@+id/view_main_rank_top_votes_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/view_main_rank_top_name_tv"
                android:layout_marginTop="5dp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:text="礼物:0"/>
        </RelativeLayout>
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:background="@color/white"
        app:cardCornerRadius="10dp">
        <com.yunbao.phonelive.custom.RefreshView
            android:id="@+id/refreshView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            app:showNoData="false"
            app:enableLoadMore="true"/>
    </android.support.v7.widget.CardView>
</LinearLayout>